# QtPlugin

./: README.md
assets/: Bundle.cmake  CMakeLists.txt
src/jack/campbell/work/qt/: CMakeListsEditor.java  NewQtClassAction.java  NewQtClassDialog.form  NewQtClassDialog.java  NewQtDialogFile.java  NewQtProject.java  NewQtProjectStep.form  NewQtProjectStep.java  NewQtProjectWizard.java  NewQtProjectWizart.java  NewQtWindowFile.java  QtFileTypeRegistration.java  QtPreference.java  QtResourceView.form  QtResourceView.java
